2014-10-24 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * fixing buildHisto in python/sample.py: default lower edge of histograms now 0.5 as required for the 'cuts' case (previously buggy)
        * added the functionality to define a width of the bins - formerly alsways 1., now variable. Default is 1. to ensure backward compatibility.

2014-10-02 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * moving macros/contourplot and analysis/batchjobs directories to HistFitter User
        * add licences to files in macro directory
        * remove ATLAS specific stuff in macro directory
        D macros/AtlasStyle.C and macros/AtlasStyle.h

2014-09-19 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * starting to comment macro directory - to be continued

2014-09-08 Alex Koutsman <alex.koutsman@cern.ch>
	* setup.sh: several updates to make the setup script non CERN specific (working after setting up localRootSetup)
	* Might possibly need to be changed again for the public code release
	* Tagging HistFitter-00-00-42 (for HF tutorial at TRIUMF)

2014-09-02 Alex Koutsman <alex.koutsman@cern.ch>
	* Several updates to make the tutorial work with HF trunk
	* Also the HF tutorial twiki is updated (in time for HF tutorial at TRIUMF, 10-12 Sept 2014)
	* Tagging HistFitter-00-00-41

2014-08-19 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        M scripts/UpperLimitTable.py
        * resetting of signal strength parameter not done correctly for calculation of discovery p-value. 
        * Fixed by explicit reopening of the workspace before the calculation of discovery p-value.

2014-07-23 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * Tagging HistFitter-00-00-40

2014-07-15 Max Baak <mbaak@cern.ch>
	M       src/Utils.cxx
	M       src/ValidationUtils.cxx
	* Fix two small compiler warnings

2014-07-14 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>