@@ -35,9 +35,9 @@ import logger
 from logger import Logger
 
 from ROOT import gROOT
-gROOT.LoadMacro("./macros/AtlasStyle.C")
+#gROOT.LoadMacro("./macros/AtlasStyle.C")
 import ROOT
-ROOT.SetAtlasStyle()
+#ROOT.SetAtlasStyle()
 
 log = Logger("MyShapeFitExample")
 log.setLevel(logger.INFO) #should have no effect if -L is used
