@@ -28,9 +28,9 @@ import os
 
 # Setup for ATLAS plotting
 from ROOT import gROOT
-gROOT.LoadMacro("./macros/AtlasStyle.C")
+#gROOT.LoadMacro("./macros/AtlasStyle.C")
 import ROOT
-ROOT.SetAtlasStyle()
+#ROOT.SetAtlasStyle()
 
 ##########################
 
