@@ -1,3 +1,6 @@
+2015-01-21 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
+        * multiple smaller modifications for the tutorial, mostly commenting any usage of the ATLAS plotting style, but also adding the file MyUpperLimitAnalysis_SS.py back
+
 2014-10-24 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
         * fixing buildHisto in python/sample.py: default lower edge of histograms now 0.5 as required for the 'cuts' case (previously buggy)
         * added the functionality to define a width of the bins - formerly alsways 1., now variable. Default is 1. to ensure backward compatibility.
